# python-stubs

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  pyrightconfig.json  requirements-tests.txt  requirements.in  requirements.txt  run.py  stubtest_allowlist.txt
.github/setup/: action.yml
.github/workflows/: tests.yml
stubs/: __builtins__.pyi
stubs/geopandas/: __init__.pyi  array.pyi  base.pyi  explore.pyi  geodataframe.pyi  geoseries.pyi  plotting.pyi  sindex.pyi
stubs/geopandas-stubs/: .ruff.toml  __init__.pyi  _config.pyi  _decorator.pyi  _exports.pyi  array.pyi  base.pyi  explore.pyi  geodataframe.pyi  geoseries.pyi  plotting.pyi  sindex.pyi  testing.pyi
stubs/geopandas-stubs/datasets/: __init__.pyi  naturalearth_creation.pyi
stubs/geopandas-stubs/io/: _geoarrow.pyi  arrow.pyi  file.pyi  sql.pyi
stubs/geopandas-stubs/tools/: clip.pyi  geocoding.pyi  overlay.pyi  sjoin.pyi  util.pyi
stubs/geopandas/datasets/: naturalearth_creation.pyi
stubs/geopandas/io/: arrow.pyi  file.pyi  sql.pyi
stubs/geopandas/tools/: clip.pyi  geocoding.pyi  overlay.pyi  sjoin.pyi  util.pyi
stubs/netfields/: __init__.pyi  apps.pyi  compat.pyi  fields.pyi  forms.pyi  functions.pyi  lookups.pyi  mac.pyi  managers.pyi  psycopg2_types.pyi  rest_framework.pyi
stubs/netfields-stubs/: .ruff.toml  __init__.pyi  fields.pyi  forms.pyi  functions.pyi  lookups.pyi  mac.pyi  managers.pyi  psycopg3_types.pyi  rest_framework.pyi
stubs/pandapower/: __init__.pyi  auxiliary.pyi  build_branch.pyi  build_bus.pyi  build_gen.pyi  create.pyi  diagnostic.pyi  diagnostic_reports.pyi  file_io.pyi  groups.pyi  io_utils.pyi  results.pyi  results_bus.pyi  run.pyi  runpm.pyi  sql_io.pyi  std_types.pyi  toolbox.pyi
stubs/pandapower-stubs/: .ruff.toml  __init__.pyi  _typing.pyi  _version.pyi  auxiliary.pyi  build_branch.pyi  build_bus.pyi  build_gen.pyi  convert_format.pyi  create.pyi  diagnostic.pyi  file_io.pyi  groups.pyi  io_utils.pyi  network_structure.pyi  optimal_powerflow.pyi  powerflow.pyi  pp_types.pyi  results.pyi  results_bus.pyi  run.pyi  runpm.pyi  sql_io.pyi  std_types.pyi  toolbox.pyi
stubs/pandapower-stubs/control/: __init__.pyi  basic_controller.pyi  run_control.pyi
stubs/pandapower-stubs/create/: __init__.pyi  bus_create.pyi  cost_create.pyi  ext_grid_create.pyi  gen_create.pyi  group_create.pyi  impedance_create.pyi  line_create.pyi  load_create.pyi  measurement_create.pyi  motor_create.pyi  network_create.pyi  sgen_create.pyi  shunt_create.pyi  source_create.pyi  storage_create.pyi  switch_create.pyi  trafo_create.pyi  ward_create.pyi
stubs/pandapower-stubs/diagnostic/: __init__.pyi  diagnostic.pyi  diagnostic_functions.pyi  diagnostic_helpers.pyi
stubs/pandapower-stubs/estimation/: idx_brch.pyi  idx_bus.pyi  ppc_conversion.pyi  results.pyi  state_estimation.pyi  util.pyi
stubs/pandapower-stubs/grid_equivalents/: auxiliary.pyi  get_equivalent.pyi  rei_generation.pyi  toolbox.pyi  ward_generation.pyi
stubs/pandapower-stubs/networks/: __init__.pyi  cigre_networks.pyi  create_examples.pyi  dickert_lv_networks.pyi  ieee_europen_lv_asymmetric.pyi  kerber_extreme_networks.pyi  kerber_networks.pyi  lv_schutterwald.pyi  mv_oberrhein.pyi  power_system_test_cases.pyi
stubs/pandapower-stubs/opf/: make_objective.pyi  pm_storage.pyi
stubs/pandapower-stubs/pf/: create_jacobian.pyi  create_jacobian_facts.pyi  dSbus_dV_numba.pyi  makeYbus_facts.pyi  makeYbus_numba.pyi  no_numba.pyi  pfsoln_numba.pyi  run_bfswpf.pyi  runpp_3ph.pyi
stubs/pandapower-stubs/plotting/: collections.pyi  generic_geodata.pyi  geo.pyi  patch_makers.pyi  plotting_toolbox.pyi  powerflow_results.pyi  simple_plot.pyi  to_html.pyi
stubs/pandapower-stubs/protection/: basic_protection_device.pyi  example_grids.pyi  run_protection.pyi  utility_functions.pyi
stubs/pandapower-stubs/pypower/: _compat.pyi  add_userfcn.pyi  bustypes.pyi  d2ASbr_dV2.pyi  d2Sbus_dV2.pyi  dIbr_dV.pyi  dSbr_dV.pyi  dcopf_solver.pyi  fdpf.pyi  gausspf.pyi  idx_area.pyi  idx_bivsc.pyi  idx_brch.pyi  idx_brch_dc.pyi  idx_brch_sc.pyi  idx_brch_tdpf.pyi  idx_bus.pyi  idx_bus_dc.pyi  idx_bus_sc.pyi  idx_cost.pyi  idx_gen.pyi  idx_source_dc.pyi  idx_ssc.pyi  idx_svc.pyi  idx_tcsc.pyi  idx_vsc.pyi  isload.pyi  makeAang.pyi  makeB.pyi  makeBdc.pyi  makeLODF.pyi  newtonpf.pyi  opf_args.pyi  opf_consfcn.pyi  opf_costfcn.pyi  opf_execute.pyi  opf_model.pyi  opf_setup.pyi  pfsoln.pyi  pips.pyi  (+7 more)
stubs/psqlextra/: __init__.pyi  expressions.pyi  lookups.pyi  query.pyi  sql.pyi  type_assertions.pyi  util.pyi
stubs/psqlextra-stubs/: .ruff.toml  apps.pyi  compiler.pyi  error.pyi  expressions.pyi  locking.pyi  query.pyi  schema.pyi  settings.pyi  sql.pyi  type_assertions.pyi  types.pyi  util.pyi
stubs/pyogrio-stubs/: .ruff.toml  __init__.pyi  _typing.pyi  core.pyi  geopandas.pyi  raw.pyi  util.pyi
stubs/seaborn/: _compat.pyi  _decorators.pyi  _docstrings.pyi  _oldcore.pyi  _statistics.pyi  _testing.pyi  algorithms.pyi  axisgrid.pyi  categorical.pyi  distributions.pyi  matrix.pyi  palettes.pyi  rcmod.pyi  regression.pyi  relational.pyi  utils.pyi  widgets.pyi
stubs/shapely-stubs/: .ruff.toml  _geometry.pyi  _ragged_array.pyi  _typing.pyi  affinity.pyi  constructive.pyi  coordinates.pyi  creation.pyi  errors.pyi  io.pyi  lib.pyi  linear.pyi  measurement.pyi  ops.pyi  plotting.pyi  predicates.pyi  prepared.pyi  set_operations.pyi  strtree.pyi  testing.pyi  validation.pyi  wkb.pyi  wkt.pyi
tests/: .ruff.toml  __init__.py
tests/geopandas/: test_explore.py  test_geodataframe.py  test_geoseries.py  test_io.py
tests/shapely/: test_affinity.py  test_constructive.py  test_coordinates.py  test_creation.py  test_geometry.py  test_io.py  test_linear.py  test_measurement.py  test_ops.py  test_predicates.py  test_prepared.py  test_set_operations.py  test_strtree.py
tests/test_shapely/: test_affinity.py  test_constructive.py  test_coordinates.py  test_creation.py  test_geometry.py  test_io.py  test_lib.py  test_linear.py  test_ops.py  test_predicates.py  test_prepared.py  test_set_operations.py  test_strtree.py
(+359 files in other folders)
