[project]
name = "python-stubs"
version = "0.0.0"
requires-python = ">=3.9"

[tool.ruff]
line-length = 130
fix = true
src = ["stubs"]

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.ruff.lint]
extend-select = [
    "PYI",    # flake8-pyi
    "PGH004", # flake8-noqa
    "I",      # isort
    "UP",     # pyupgrade
    "RUF100", # yesqa
    "FA",     # flake8-future-annotations
    "TID",    # flake8-tidy-imports
]
fixable = [
    "F401",   # Remove unused imports
    "UP",
    "PYI",
    "I",
    "RUF100",
    "FA",
    "TID",
]

[tool.ruff.lint.extend-per-file-ignores]
"*.pyi" = [
    "E741", # ambiguous-variable-name
    "F403", # undefined-local-with-import-star
    "F405", # undefined-local-with-import-star-usage
]
"__init__.pyi" = ["TID252"]

[tool.ruff.lint.isort]
combine-as-imports = true
split-on-trailing-comma = false
extra-standard-library = ["typing_extensions", "_typeshed"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.mypy]
mypy_path = "stubs/"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pyright]
# Project settings
stubPath = "stubs/"
enableTypeIgnoreComments = false # Leave "type: ignore" comments to mypy
ignore = [
    "**/site-packages/", # Disable annoying checks in third-party library code
]

# Strict mode
typeCheckingMode = "strict"
reportCallInDefaultInitializer = "error"
reportUnnecessaryTypeIgnoreComment = "error"

# Disable extra strict settings
reportIncompleteStub = "none"
reportMissingParameterType = "none"
reportUnknownMemberType = "none"
reportUnknownParameterType = "none"
reportUnknownVariableType = "none"

# Not relevant for stubs
reportMissingModuleSource = "none"
reportMissingTypeStubs = "none"
reportPrivateUsage = "none"
reportOverlappingOverload = "none" # Overlapping overloads are often necessary in stubs

# Out of control of the stubs (inherited from implementation)
reportIncompatibleMethodOverride = "none"
reportIncompatibleVariableOverride = "none"
reportPropertyTypeMismatch = "none"
reportSelfClsParameterName = "none"

[tool.pytest.ini_options]
testpaths = ["tests"]
