[project]
name = "python-stubs"
version = "0.0.0"
requires-python = ">=3.9"

[dependency-groups]
tests = [
    # geopandas and shapely
    "types-geopandas>=1.0.1",
    "types-shapely>=2.0.0",
    "pandas-stubs>=2.2.2",
    "matplotlib>=3.8.0",
    "folium>=0.16.0",
    "rtree>=1.2.0",
    # netfields and psqlextra
    "django-types>=0.19.1",
    "djangorestframework-types>=0.8.0",
    "types-psycopg2>=2.9.21",
    "types-netaddr>=1.2.0",
    "types-python-dateutil>=2.9.0",
    # pandapower
    "networkx>=3.2.1",
    "geopandas>=1.0.0",
    "pandapower>=3.1.2",
    "types-networkx>=3.4.2",
]
dev = [
    "ruff>=0.9.2",
    "pytest>=8.0",
    "rich-argparse>=1.6.0",
    "mypy>=1.14.1",
    "pyright>=1.1.392",
    { include-group = "tests" },
]

[tool.ruff]
line-length = 130
fix = true
src = ["stubs"]

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.ruff.lint]
extend-select = [
    "PYI",    # flake8-pyi
    "PGH004", # flake8-noqa
    "I",      # isort
    "UP",     # pyupgrade
    "RUF100", # yesqa
    "FA",     # flake8-future-annotations
    "TID",    # flake8-tidy-imports
]
fixable = [
    "F401",   # Remove unused imports
    "UP",
    "PYI",
    "I",
    "RUF100",
    "FA",
    "TID",
]

[tool.ruff.lint.extend-per-file-ignores]
"*.pyi" = [
    "E741", # ambiguous-variable-name
    "F403", # undefined-local-with-import-star
    "F405", # undefined-local-with-import-star-usage
]
"__init__.pyi" = ["TID252"]

[tool.ruff.lint.isort]
combine-as-imports = true
split-on-trailing-comma = false
extra-standard-library = ["typing_extensions", "_typeshed"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.mypy]
mypy_path = "stubs/"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
enable_error_code = "deprecated"

[tool.pyright]
# Project settings
stubPath = "stubs/"
enableTypeIgnoreComments = false # Leave "type: ignore" comments to mypy
ignore = [
    "**/site-packages/", # Disable annoying checks in third-party library code
]

# Strict mode
typeCheckingMode = "strict"
reportCallInDefaultInitializer = "error"
reportUnnecessaryTypeIgnoreComment = "error"

# Disable extra strict settings
reportIncompleteStub = "none"
reportMissingParameterType = "none"
reportUnknownMemberType = "none"
reportUnknownParameterType = "none"
reportUnknownVariableType = "none"

# Not relevant for stubs
reportMissingModuleSource = "none"
reportMissingTypeStubs = "none"
reportPrivateUsage = "none"
reportOverlappingOverload = "none" # Overlapping overloads are often necessary in stubs

# Out of control of the stubs (inherited from implementation)
reportIncompatibleMethodOverride = "none"
reportIncompatibleVariableOverride = "none"
reportPropertyTypeMismatch = "none"
reportSelfClsParameterName = "none"

[tool.pytest.ini_options]
testpaths = ["tests"]
