[project]
name = "python-stubs"
version = "0.0.0"
requires-python = ">=3.12"

[dependency-groups]
tests = [
    # geopandas and shapely
    "types-geopandas>=1.0.1",
    "types-shapely>=2.0.0",
    "pandas-stubs>=2.2.2",
    "pyarrow-stubs>=20.0.0",
    "matplotlib>=3.8.0",
    "folium>=0.16.0",
    "rtree>=1.2.0",
    # netfields and psqlextra
    "django-types>=0.19.1",
    "djangorestframework-types>=0.8.0",
    "types-psycopg2>=2.9.21",
    "types-netaddr>=1.2.0",
    "types-python-dateutil>=2.9.0",
    # pandapower
    "networkx>=3.2.1",
    "geopandas>=1.0.0",
    "pandapower>=3.1.2,<3.5",  # TODO: remove upper bound
    "types-networkx>=3.4.2",
]
dev = [
    "ruff>=0.15.21",
    "pytest>=9.0",
    "rich-argparse>=1.8.0",
    "mypy[native-parser]>=2.2.0",
    "pyright>=1.1.411",
    "ty>=0.0.58",
    "pyrefly>=1.1.1",
    { include-group = "tests" },
]

[tool.ruff]
line-length = 130
fix = true
src = ["stubs"]

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.ruff.lint]
extend-select = [
    "PYI",    # flake8-pyi
    "PGH004", # flake8-noqa
    "I",      # isort
    "UP",     # pyupgrade
    "RUF100", # yesqa
    "FA",     # flake8-future-annotations
    "TID",    # flake8-tidy-imports
]
fixable = [
    "F401",   # Remove unused imports
    "UP",
    "PYI",
    "I",
    "RUF100",
    "FA",
    "TID",
]

[tool.ruff.lint.extend-per-file-ignores]
"*.pyi" = [
    "E741", # ambiguous-variable-name
    "F403", # undefined-local-with-import-star
    "F405", # undefined-local-with-import-star-usage
    "UP042", # replace-str-enum
]
"__init__.pyi" = ["TID252"]

[tool.ruff.lint.isort]
combine-as-imports = true
split-on-trailing-comma = false
extra-standard-library = ["typing_extensions", "_typeshed"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.mypy]
mypy_path = "stubs/"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
enable_error_code = "deprecated"
allow_redefinition = true
native_parser = true

[tool.pyright]
# Project settings
stubPath = "stubs/"
enableTypeIgnoreComments = false # Leave "type: ignore" comments to mypy

# Strict mode
typeCheckingMode = "strict"
reportCallInDefaultInitializer = "error"
reportUnnecessaryTypeIgnoreComment = "error"

# Disable extra strict settings
reportIncompleteStub = "none"
reportMissingParameterType = "none"
reportUnknownMemberType = "none"
reportUnknownParameterType = "none"
reportUnknownVariableType = "none"

# Not relevant for stubs
reportMissingModuleSource = "none"
reportMissingTypeStubs = "none"
reportPrivateUsage = "none"
reportOverlappingOverload = "none" # Overlapping overloads are often necessary in stubs

# Out of control of the stubs (inherited from implementation)
reportIncompatibleMethodOverride = "none"
reportIncompatibleVariableOverride = "none"
reportPropertyTypeMismatch = "none"
reportSelfClsParameterName = "none"

[tool.ty]
analysis.respect-type-ignore-comments = false
environment.extra-paths = ["./stubs/"]
terminal.output-format = "concise"

[tool.ty.rules]
deprecated = "error"
invalid-method-override = "ignore" # out of control of the stubs (inherited from implementation)

[tool.pyrefly]
site-package-path = ["./stubs/"]
enabled-ignores = ["pyrefly"]
output-format = "min-text"

[tool.pyrefly.errors]
deprecated = "error"
# Out of control of the stubs (inherited from implementation)
bad-override = false
inconsistent-inheritance = false

[tool.pytest.ini_options]
testpaths = ["tests"]
